--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habits</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </button>
     </header>
 
-    <form >
+    <form>
         <div class="habits">
             <div class="habit">🏃‍♂️</div>
             <div class="habit">💧</div>
@@ -46,7 +47,7 @@
         </div>
     </form>
 
-    
+
 </body>
 
 </html>
